# tt-metal-sys

./: .gitignore  Cargo.toml  README.md  build.rs
cpp/: wrapper.cpp  wrapper.hpp  wrapper_stub.cpp
examples/: add_two_ints.rs  hello_kernel.rs
src/: ffi.rs  lib.rs
